# moostar

./: CMakeLists.txt  Makefile  README.md  SPECS.txt  main.cpp
examples/: assign_x_to_y.bf  cat.bf  cell_size.bf  functional_arithmetics.bf  functional_power.bf  functional_test.bf  hello_world_complex.bf  io_access.bf  power.bf  rot13.bf
src/: bfinterpretor.cpp  bfinterpretor.h  config.h.in  main.cpp
